cabal-version:       2.2
name:                pr-summary
version:             0.1.0.0

license:             MIT
license-file:        LICENSE
author:              Matt Gilbert

executable pr-summary
  main-is:             Main.hs
  build-depends:       base
                     , http-client
                     , http-conduit
                     , bytestring
                     , aeson
                     , base64-bytestring
                     , time
                     , containers
                     , directory
                     , filepath
                     , terminal-size
                     , async

  hs-source-dirs:      src

  default-language:    Haskell2010

