cabal-version:       2.2
name:                pr-summary
version:             0.1.0.0

license:             MIT
license-file:        LICENSE
author:              Matt Gilbert

executable pr-summary
  main-is:             Main.hs
  other-modules:       Types, Output
  build-depends:       base
                     , http-client
                     , http-conduit
                     , bytestring
                     , text
                     , aeson
                     , base64-bytestring
                     , time
                     , containers
                     , directory
                     , filepath
                     , terminal-size
                     , ansi-terminal
                     , async
                     , colour

  hs-source-dirs:      src

  default-language:    Haskell2010

